new feature: added parameter to decide whether to evaluate anchors first and then all other tags or evaluate all tags immediately